--- a/style.css
+++ b/style.css
@@ -1,60 +1,43 @@
+/* General page styling */
 body {
-  background-color: #000;
   margin: 0;
   height: 100vh;
-  overflow: hidden; /* Prevent scrollbars during animation */
-  position: relative;
+  width: 100vw;
+  background: black;
+  overflow: hidden;
   display: flex;
-  align-items: center;
   justify-content: center;
-}
-
-.center-text {
+  align-items: center;
   font-family: 'Press Start 2P', cursive;
-  font-size: 1.5rem;
-  background: linear-gradient(90deg, #ff0080, #ff8c00, #39ff14);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  text-align: center;
-  z-index: 10;
-  position: relative;
 }
 
-/* Bull animation */
-.running-bull {
-  width: 48px;
-  height: 48px;
+/* Center text */
+.center-text {
   position: absolute;
-  top: 0;
-  left: 0;
-  animation: runAround 12s linear infinite;
-  z-index: 5;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: orange;
+  font-size: 2rem;
+  text-align: center;
+  text-shadow: 2px 2px 0px #fff;
+  z-index: 2;
 }
 
-@keyframes runAround {
-  0% {
-    top: 0;
-    left: 0;
-    transform: scaleX(1);
-  }
-  25% {
-    top: 0;
-    left: calc(100vw - 48px);
-    transform: scaleX(-1);
-  }
-  50% {
-    top: calc(100vh - 48px);
-    left: calc(100vw - 48px);
-    transform: scaleX(-1);
-  }
-  75% {
-    top: calc(100vh - 48px);
-    left: 0;
-    transform: scaleX(1);
-  }
-  100% {
-    top: 0;
-    left: 0;
-    transform: scaleX(1);
-  }
+/* Running bull image */
+.running-bull {
+  position: absolute;
+  width: 120px;
+  height: auto;
+  animation: runLoop 12s linear infinite;
+  z-index: 1;
+}
+
+/* Keyframes for bull looping around the edges */
+@keyframes runLoop {
+  0%   { top: 0; left: 0; transform: scaleX(1); }         /* Top-left */
+  25%  { top: 0; left: calc(100% - 120px); transform: scaleX(1); }  /* Top-right */
+  50%  { top: calc(100% - 120px); left: calc(100% - 120px); transform: scaleX(-1);} /* Bottom-right */
+  75%  { top: calc(100% - 120px); left: 0; transform: scaleX(-1);} /* Bottom-left */
+  100% { top: 0; left: 0; transform: scaleX(1);}          /* Back to start */
 }
